@@ -2,6 +2,7 @@
 
 #17 Wrap CLI Options API to avoid direct dependency on JOpt lib in commands
 #18 Separate a concept of DI-bound option from Command
+#19 Command dispatch mechanism based on Cli state
 
 0.11:
 
